# promptver

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  sha256.rs
tests/: integration.rs
